使用 Colab 创建而成

--- a/Ch06_SelfSupervised/ec06_1_lodestar/lodestar.ipynb
+++ b/Ch06_SelfSupervised/ec06_1_lodestar/lodestar.ipynb
@@ -3,6 +3,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Azzzzen/Chalmers-TDA362-CGLabs/blob/main/Ch06_SelfSupervised/ec06_1_lodestar/lodestar.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "IH0XvdgN9kyO"
       },
       "source": [
@@ -134,12 +144,12 @@
         "plt.show()"
       ],
       "metadata": {
-        "id": "9hD_iqG6JJKp",
-        "outputId": "68591912-9e7d-4463-fce7-e29cc7a01a1f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 194
-        }
+        },
+        "id": "9hD_iqG6JJKp",
+        "outputId": "68591912-9e7d-4463-fce7-e29cc7a01a1f"
       },
       "execution_count": 31,
       "outputs": [
@@ -913,8 +923,6 @@
     {
       "cell_type": "code",
       "source": [
-        "# === Inserted: ParticleLocalizerWithRotation and rotation utilities ===\n",
-        "\n",
         "import torch.nn.functional as F\n",
         "import math\n",
         "\n",
@@ -942,19 +950,17 @@
         "        return batch\n",
         "\n",
         "    def inverse_transform(self, preds, translation, rotation_angle):\n",
-        "    # 将角度转换为弧度\n",
         "        radians = rotation_angle * math.pi / 180\n",
         "        cos = torch.cos(radians)\n",
         "        sin = torch.sin(radians)\n",
         "\n",
-        "        # 构造逆旋转矩阵并应用到每个预测点\n",
         "        rot = torch.stack([\n",
         "            torch.stack([cos, sin], dim=1),\n",
         "            torch.stack([-sin, cos], dim=1)\n",
-        "        ], dim=1)  # shape: [B, 2, 2]\n",
+        "        ], dim=1)\n",
         "\n",
-        "        preds = torch.bmm(rot, preds.unsqueeze(-1)).squeeze(-1)  # 批量矩阵乘法\n",
-        "        preds = inverse_translation(preds, translation)  # 再做反平移\n",
+        "        preds = torch.bmm(rot, preds.unsqueeze(-1)).squeeze(-1)\n",
+        "        preds = inverse_translation(preds, translation)\n",
         "        return preds\n",
         "\n",
         "    def random_arguments(self):\n",
@@ -1095,24 +1101,19 @@
       "source": [
         "image_center = image_size / 2 - 0.5\n",
         "\n",
-        "# 原始预测\n",
         "direct_preds = localizer_with_rotation(images).detach().numpy()\n",
         "\n",
-        "# 180°旋转图像并预测\n",
         "rotated_images = rotate_transform(images, torch.full((images.shape[0],), 180).to(images.device))\n",
         "rotated_preds = localizer_with_rotation(rotated_images).detach().numpy()\n",
         "\n",
-        "# 坐标中心化（移到图像中心）\n",
         "rotated_preds_centered = rotated_preds - image_center\n",
-        "# 取负表示旋转180°\n",
+        "\n",
         "rotated_preds_centered = -rotated_preds_centered\n",
-        "# 还原回图像坐标\n",
+        "\n",
         "rotated_preds = rotated_preds_centered + image_center\n",
         "\n",
-        "# 平均两个预测\n",
         "predictions_avg = (direct_preds + rotated_preds) / 2\n",
         "\n",
-        "# 可视化结果\n",
         "plot_position_comparison(positions, predictions_avg)\n"
       ],
       "metadata": {
@@ -1236,12 +1237,12 @@
         "plot_position_comparison(positions, lodestar_predictions2)"
       ],
       "metadata": {
-        "id": "9HqqzljY_Rm_",
-        "outputId": "2b260d64-ffbb-4ed0-db71-9e716dc27b6b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 411
-        }
+        },
+        "id": "9HqqzljY_Rm_",
+        "outputId": "2b260d64-ffbb-4ed0-db71-9e716dc27b6b"
       },
       "execution_count": 21,
       "outputs": [
@@ -1283,7 +1284,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "zEiVOOFVrjHH",
         "outputId": "9d1bae18-d513-4081-94ac-c5716c27c723"
@@ -1320,7 +1322,8 @@
       "version": "3.10.15"
     },
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "widgets": {
       "application/vnd.jupyter.widget-state+json": {
